k8s/manifests/civo-wasm-registry-volume.yaml
# k8s/manifests/wasm-files-volume.yaml
---
# Create a pod to copy manualy files to the PersistentVolume
apiVersion: v1
kind: Pod
metadata:
  name: wasm-registry-store
spec:
  volumes:
    - name: wasm-registry-storage
      persistentVolumeClaim:
        claimName: task-pv-wasm-registry-claim
  containers:
    - name: wasm-registry-container
      image: busybox:latest
      imagePullPolicy: IfNotPresent
      command:
        - sleep
        - "3600"
      volumeMounts:
        - mountPath: /wasm-registry-files
          name: wasm-registry-storage
