k8s/manifests/wasm-files-volume.yaml
---
# Create a pod to copy manualy files to the PersistentVolume
apiVersion: v1
kind: Pod
metadata:
  name: wasm-store
spec:
  volumes:
    - name: wasm-storage
      persistentVolumeClaim:
        claimName: task-pv-wasm-claim
  containers:
    - name: task-pv-wasm-container
      image: busybox:latest
      imagePullPolicy: IfNotPresent
      command:
        - sleep
        - "3600"
      volumeMounts:
        - mountPath: /wasm-files
          name: wasm-storage
