k8s/manifests/deploy-wasm-from-registry.yaml
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}
  labels:
    component: simplism-function
spec:
  selector:
    app: ${SERVICE_NAME}
  ports:
    - port: 80
      targetPort: 8080
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${SERVICE_NAME}
  labels:
    component: simplism-function
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${SERVICE_NAME}
  template:
    metadata:
      labels:
        app: ${SERVICE_NAME}
    spec:
      containers:
      - name: ${SERVICE_NAME}
        image: ${IMAGE_NAME}:${IMAGE_TAG}
        command: ["/simplism"]
        args: ["listen", "${WASM_FILE}", "${FUNCTION_NAME}", "--wasm-url", "${WASM_URL}"]
        ports:
          - containerPort: 8080
        imagePullPolicy: IfNotPresent
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${SERVICE_NAME}
  labels:
    component: simplism-function
spec:
  rules:
    - host: ${KUBE_NAMESPACE}.${SERVICE_NAME}.${DNS}
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: ${SERVICE_NAME}
              port: 
                number: 80
