k8s/manifests/deploy-wasm-registry.yaml
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: wasm-registry
  labels:
    component: simplism-registry
spec:
  selector:
    app: wasm-registry
  ports:
    - port: 80
      targetPort: 8080
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wasm-registry
  labels:
    component: simplism-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wasm-registry
  template:
    metadata:
      labels:
        app: wasm-registry
    spec:
      volumes:
        - name: wasm-registry-storage
          persistentVolumeClaim:
            claimName: task-pv-wasm-registry-claim
      containers:
      - name: wasm-registry
        image: ${IMAGE_NAME}:${IMAGE_TAG}
        command: ["/simplism"]
        args: ["listen", "?", "?", "--registry-mode", "true", "--registry-path", "wasm-registry-files"]
        ports:
          - containerPort: 8080
        imagePullPolicy: IfNotPresent
        #imagePullPolicy: Always        
        volumeMounts:
          - mountPath: /wasm-registry-files
            name: wasm-registry-storage
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wasm-registry
  labels:
    component: simplism-registry
spec:
  rules:
    - host: ${KUBE_NAMESPACE}.registry.${DNS}
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: wasm-registry
              port: 
                number: 80
